sample_final/006.argoCD/k8s-argo-yaml/argocd-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/part-of: argocd
  name: argocd-server-nodeport
  namespace: argocd
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
    nodePort: 31321
  - name: https
    port: 443
    protocol: TCP
    targetPort: 8080
    nodePort: 31322
  type: NodePort
  selector:
    app.kubernetes.io/name: argocd-server
